# 641

./: .gitignore  assignment1.ipynb  assignment10.ipynb  assignment11.ipynb  assignment12.ipynb  assignment13.ipynb  assignment2.ipynb  assignment3.ipynb  assignment4.ipynb  assignment5.ipynb  assignment6.ipynb  assignment7.ipynb  assignment8.ipynb  assignment9.ipynb  cipher.txt  modular_arithmetic.ipynb
export/: assignment1.html  assignment10.html  assignment11.html  assignment12.html  assignment13.html  assignment2.html  assignment3.html  assignment4.html  assignment5.html  assignment6.html  assignment7.html  assignment8.html  assignment9.html
project/: README.md  pyproject.toml  writeup.md
project/src/: client.py  crypto_primitives.py  dtls_common.py  server.py  test_dtls.py
